Update 1.1 - Added configuration - Added cooldown to making requests (Cooldown) - Added a maximum pending requests limit (MaxPendingRequests) - Added teleport delays (Delay) - Requests are no longer stored until fulfilled (RequestDecayTime)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: sPortal-Teleport-1.20_dev
+name: Sportal-Teleport
 version: '${project.version}'
-main: enchantsplus.sportalteleport1.SPortal_Teleport_1
+main: sportal.sportalteleport1.SPortal_Teleport_1
 api-version: '1.20'
 
 commands:
