--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>enchantsplus</groupId>
-    <artifactId>sPortal-Teleport-1.20_dev</artifactId>
-    <version>0_dev</version>
+    <groupId>sportal</groupId>
+    <artifactId>Sportal-Teleport</artifactId>
+    <version>1.1</version>
     <packaging>jar</packaging>
 
-    <name>sPortal-Teleport-1.20_dev</name>
+    <name>sPortal-Teleport</name>
 
     <properties>
         <java.version>1.8</java.version>
